correct letter spacing and height for curated section details

--- a/templates/HomePage/Collections/Collection/Collection.module.sass
+++ b/templates/HomePage/Collections/Collection/Collection.module.sass
@@ -71,9 +71,9 @@
 .subtitle
     color: $n0
     font-size: 18px
-    font-weight: 700
-    line-height: 24px
-    letter-spacing: -0.1em
+    font-weight: 500
+    line-height: -5px
+    letter-spacing: -5%
     text-align: left
     margin-bottom: rem(4)
     white-space: nowrap
@@ -87,9 +87,9 @@
 
 .author
     font-size: 16px
-    font-weight: 600
-    line-height: 24px
-    letter-spacing: 0em
+    font-weight: 500
+    line-height: -5px
+    letter-spacing: -5%
     text-align: left
     white-space: nowrap
     overflow: hidden
@@ -107,8 +107,8 @@
     color: $n0
     font-size: 16px
     font-weight: 500
-    line-height: 24px
-    letter-spacing: 0em
+    line-height: -5px
+    letter-spacing: -5%
     text-align: right
     margin-bottom: rem(4)
     +d
@@ -117,7 +117,7 @@
 .price
     color: $n0
     font-size: 16px
-    font-weight: 600
-    line-height: 24px
-    letter-spacing: 0em
+    font-weight: 500
+    line-height: -5px
+    letter-spacing: -5%
     text-align: right
